--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "vite": "^5.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -26,7 +27,6 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "vite": "^5.4.0"
+    "eslint-plugin-react-refresh": "^0.4.9"
   }
 }
